# Superparty

./: .env.agent.example  .env.local.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.agent  PROOF_SUPERPARTY_SITE.md  README_SUPERPARTY_AUDIT.md  add_testimonials.py  add_testimonials_batch10.py  add_testimonials_batch2.py  add_testimonials_batch3.py  add_testimonials_batch4.py  add_testimonials_batch5.py  add_testimonials_batch6.py  add_testimonials_batch7.py  add_testimonials_batch8.py  add_testimonials_batch9.py  aladin.html  all_results.txt  all_sites_live.txt  an_homepage_check.txt  apply_13_themes.py  astro.config.mjs  astro_check.txt  audit_and_fix_ready.py  base_diff.txt  base_diff_u8.txt  bfinal.txt  block_d_live_qa.txt  build_13_absolute_unique.py  build_13_truly_unique.py  build_5_templates.py  build_anti_pbn_pwa.py  build_err.txt  build_err_u8.txt  build_error.txt  build_final.txt  build_log.txt  build_log2.txt  (+110 more)
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.vercel/: project.json
agent/: README_MULTIAGENT.md  README_MULTI_SITE.md  requirements.txt
core/: site_adapter.py
dashboard/: README.md  api.py  index.html  test_connection.py
deploy/: fix_nginx.py  nginx-dashboard.conf  seo-dashboard.service
docs/: CROSS_SITE_UNIQUENESS_POLICY.md  KEYWORD_MAP_3_SITES.md  SITEMAP_INDEXING_RULES.md  google-ads-setup.md  (+3 more)
engine/: README.md  pyproject.toml
engine/adapters/animatopia/: __init__.py
engine/adapters/superparty/: __init__.py
engine/core/: run2_planner.py  run_readiness.py
engine/tests/: test_adapters.py
(+6026 files in other folders)
