[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "seo-control-plane"
version = "0.1.0"
description = "SEO Control Plane — engine comun L5/L6 pentru multi-site"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
